2006-02-02  Ethan Merritt  <merritt@u.washington.edu>

	* src/gplt_x11.c (handle_selection_event): Clean up yesterday's
	code a little, and separate the pixmap request from the mouse
	coordinate string request.  By making the string request
	separately, it seems that klipper now notices it. 

2006-02-01  Ethan Merritt  <merritt@u.washington.edu>

	* src/gplt_x11.c (handle_selection_event): Fix bad interaction 
	between gnuplot_x11 and X11 clipboard management tool "klipper".
	Refuse to export the pixmap and colormap more than once per
	plot export. For unknown reasons, klipper continues to ask for
	copies of both ad infinitum.  Fixes bugs ##1225866 and #1420675.

2006-01-31  Ethan Merritt  <merritt@u.washington.edu>

	* src/command.c: (VMS) replace MAILBOX with "PLOT$MAILBOX"

	* src/set.c (set_timestamp): Use gp_strdup() rather than strdup().

	* src/term_api.h: Remove trailing comma from definition of 
	t_termlayer.

	* src/util.c (existdir): Special case VMS.

	With these minor tweaks, the current gnuplot source will compile
	and build under VMS using DECC.  Not all drivers tested, though.

2006-01-28  Ethan Merritt  <merritt@u.washington.edu>

	* src/term.c (parse_term_size): New routine intended to be shared
	by terminals with "set term <foo> size XX, YY" option. The routine
	itself supports size specification in inches, cm, or pixels. The
	calling terminal can limit which units are acceptable.

	* term/post.trm (term_options): "set term ... size XX, YY" option.
	This is intended to replace the older mechanism:
	"set size ... ; set term ...".  The new code gets the bounding box
	right, which the old mechanism does not, and it rationalizes the use
	of screen coordinates to match that of other (but not all) terminals.

2006-01-26  Ethan Merritt  <merritt@u.washington.edu>

	* src/datafile.c (df_read_matrix):  Bugfix for "every" option in plot
	"matrix ... every *:*:firstpoint:*".  If we are explicitly skipping